--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
       <script>
          function loadNewDoc(){ 
             var loc = window.location;
-            window.location = 'callback.athom.com' + loc.port + loc.pathname + loc.search; 
+            window.location = 'https://callback.athom.com' + loc.port + loc.pathname + loc.search; 
          };
       </script>
    </head>
